Update JAR_new.md